# talkBox

./: .gitignore  AGENTS.md  README.md  config.yaml.example  pyproject.toml
src/talkbox/: __main__.py  chat.py  llm.py  memory.py  tui.py
src/talkbox/voice/: asr.py  chat.py  recorder.py  tts.py
